--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1432,7 +1432,7 @@ footer {
   height: 100%;
   position: absolute;
   background-repeat: no-repeat;
-  background-image: url(../media/images/salon_floor.webp);
+  background-image: url(../media/images/salon_floor_compressed.jpg);
   background-size: cover;
   background-position: center;
   opacity: 40%;
@@ -1582,6 +1582,17 @@ footer {
     width: 100px;
   }
 }
+
+.rate-us-btn {
+  margin: 0 auto 30px auto;
+}
+
+@media screen and (min-width: 951px) {
+  .rate-us-btn {
+    margin: 40px auto 0 0;
+  }
+}
+
 /* ======================================================================= */
 /* ======================== PRIVACY NOTICE PAGE ========================== */
 .privacy-ul {
