--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1757,7 +1757,7 @@ footer {
   height: 100%;
   position: absolute;
   background-repeat: no-repeat;
-  background-image: url(../media/images/salon_floor.webp);
+  background-image: url(../media/images/salon_floor_compressed.jpg);
   background-size: cover;
   background-position: center;
   opacity: 40%;
@@ -1935,6 +1935,16 @@ footer {
     margin-top: 50px;
     display: block;
     width: 100px;
+  }
+}
+
+.rate-us-btn {
+  margin: 0 auto 30px auto;
+}
+
+@media screen and (min-width: 951px) {
+  .rate-us-btn {
+    margin: 40px auto 0 0;
   }
 }
 
