--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -59,6 +59,10 @@ header {
   }
 }
 
+.page-height {
+  height: 100%;
+}
+
 .flex {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1498,7 +1502,7 @@ footer {
     "other-treatments"
     "haircolor";
   width: 100%;
-  height: 1440px;
+  height: 1480px;
   margin: 20px auto 0 auto;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
@@ -1513,7 +1517,7 @@ footer {
 
 @media screen and (min-width: 672px) and (max-width: 950px) {
   .prices-grid {
-    height: 1350px;
+    height: 1390px;
   }
 }
 
@@ -1940,11 +1944,13 @@ footer {
 
 .rate-us-btn {
   margin: 0 auto 30px auto;
+  width: 220px !important;
 }
 
 @media screen and (min-width: 951px) {
   .rate-us-btn {
     margin: 40px auto 0 0;
+    width: 195px;
   }
 }
 
