--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,7 @@ header {
 }
 
 .page-height {
-  height: 100%;
+  min-height: 100%;
 }
 
 @media screen and (min-width: 672px) and (max-width: 950px) {
