--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -23,7 +23,9 @@ Author: Noerwald v/ Camilla Nørgaard og Maja Wennwewald
 
 body {
   background: var(--black-gradient);
-  height: 100vh;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 header,
@@ -43,6 +45,7 @@ header {
 .page-margin {
   width: 85%;
   margin: 10% auto;
+  flex-grow: 1;
 }
 
 @media screen and (min-width: 672px) and (max-width: 950px) {
@@ -58,10 +61,6 @@ header {
     margin: 5% auto;
   }
 }
-
-/* .page-height {
-  min-height: 80%;
-} */
 
 .flex {
   display: -webkit-box;
@@ -756,6 +755,8 @@ button {
 /* ================================ FOOTER =============================== */
 footer {
   background-color: var(--primary-black);
+  width: 100%;
+  flex-shrink: 0;
 }
 
 .footer-grid {
