--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,10 +67,6 @@ header {
   margin: 0;
 }
 
-/* .page-height {
-  min-height: 80%;
-} */
-
 @media screen and (min-width: 672px) and (max-width: 950px) {
   .flex {
     flex-direction: row;
@@ -420,6 +416,10 @@ button {
 
 /* ======================================================================= */
 /* ================================ HEADER =============================== */
+body.menu-open {
+  overflow: hidden;
+}
+
 .logo {
   width: 40px;
   z-index: 9999;
@@ -504,6 +504,7 @@ button {
   font-size: 15px;
   padding: 5px 20px 15px 20px;
   border-bottom: 2px solid var(--primary-black);
+  box-shadow: 0 4px 13px -4px #000000;
 }
 
 @media screen and (min-width: 951px) {
@@ -1041,6 +1042,10 @@ footer {
 }
 
 /* ----------------- PRODUCTS PAGE - MODAL SLIDESHOW ------------------ */
+body.modal-open {
+  overflow: hidden;
+}
+
 .modal {
   width: 100%;
   height: 100%;
