--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -514,6 +514,10 @@ button {
 
 /* ======================================================================= */
 /* ================================ HEADER =============================== */
+body.menu-open {
+  overflow: hidden;
+}
+
 .logo {
   width: 40px;
   z-index: 9999;
@@ -619,6 +623,7 @@ button {
   font-size: 15px;
   padding: 5px 20px 15px 20px;
   border-bottom: 2px solid var(--primary-black);
+  box-shadow: 0 4px 13px -4px #000000;
 }
 
 @media screen and (min-width: 951px) {
@@ -1261,6 +1266,10 @@ footer {
 }
 
 /* ----------------- PRODUCTS PAGE - MODAL SLIDESHOW ------------------ */
+body.modal-open {
+  overflow: hidden;
+}
+
 .modal {
   width: 100%;
   height: 100%;
