--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -504,13 +504,14 @@ body.menu-open {
   font-size: 15px;
   padding: 5px 20px 15px 20px;
   border-bottom: 2px solid var(--primary-black);
-  box-shadow: 0 4px 13px -4px #000000;
+  box-shadow: 0 7px 11px -8px #000000;
 }
 
 @media screen and (min-width: 951px) {
   .top-menu ul {
     display: flex;
     padding: 0;
+    box-shadow: none;
   }
 }
 .top-menu li {
@@ -917,12 +918,12 @@ footer {
 }
 @media screen and (min-width: 672px) and (max-width: 950px) {
   .opening-hours-section {
-    margin: 100px auto;
+    margin: 0 auto 100px auto;
   }
 }
 @media screen and (min-width: 951px) {
   .opening-hours-section {
-    margin: 100px auto;
+    margin: 0 auto 100px auto;
   }
 }
 
