--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -559,6 +559,7 @@ body.menu-open {
   display: none;
   z-index: 998;
   backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur(2px);
 }
 
 /* ------------------------- BURGER MENU SYMBOL -------------------------- */
