--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -683,6 +683,7 @@ body.menu-open {
   display: none;
   z-index: 998;
   backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur(2px);
 }
 
 /* ------------------------- BURGER MENU SYMBOL -------------------------- */
